chore: Fix table alignment, twitter link

--- a/src/components/pages/blog/table-content-bock.module.scss
+++ b/src/components/pages/blog/table-content-bock.module.scss
@@ -6,5 +6,6 @@
   td,
   th {
     border-bottom: 1px solid $color-slate-200;
+    text-align: left;
   }
 }
